# VERSA

./: .gitignore  LICENSE.md  PENTEST.md  README.md
.github/workflows/: deploy.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/auth/: jwt.go
backend/internal/relay/: bench.go  bench.html  buffer.go  hub.go  pentest.html  store.go  ws.go
ios-app/: project.yml
ios-app/Config/: Debug.xcconfig  Release.xcconfig
ios-app/Sources/App/: Info.plist  Versa-Bridging-Header.h  VersaApp.swift
ios-app/Sources/Auth/: KimbuAuth.swift
ios-app/Sources/Bridge/: RelayTransport.swift
ios-app/Sources/Models/: TaskEngine.swift
ios-app/Sources/Views/: ContentView.swift  LoginView.swift
ios-app/Tests/: VersaTests.swift
ios-app/VersaCore.xcframework/: Info.plist
ios-app/VersaCore.xcframework/ios-arm64-simulator/Headers/: versa_core.swift
ios-app/VersaCore.xcframework/ios-arm64/Headers/: versa_coreFFI.h  versa_coreFFI.modulemap
proto/: buf.gen.yaml  buf.yaml  sync.proto
scripts/: build-rust-xcframework.sh  build-wasm.sh  gen-proto.sh
shared-core/: Cargo.toml  build.rs
shared-core/src/: engine.rs  ffi_uniffi.rs  ffi_wasm.rs  lib.rs  types.rs  versa_core.udl
web-app/: index.html  nginx-versa-web.conf  package-lock.json  package.json  vite.config.ts
web-app/src/: main.tsx
web-app/src/components/: BenchPage.tsx  LoginPage.tsx  PentestPage.tsx  TaskList.tsx
web-app/src/hooks/: useKimbuAuth.ts  useVersaStore.ts
web-app/src/wasm/: versaEngine.ts  versa_core.d.ts  versa_core.js  versa_core_bg.wasm  versa_core_bg.wasm.d.ts
